src/test/ui/feature-gates/feature-gate-optin-builtin-traits.stderr
error[E0658]: auto traits are experimental and possibly buggy
  --> $DIR/feature-gate-optin-builtin-traits.rs:6:1
   |
LL | auto trait AutoDummyTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/13231
   = help: add #![feature(optin_builtin_traits)] to the crate attributes to enable

error[E0658]: negative trait bounds are not yet fully implemented; use marker types for now
  --> $DIR/feature-gate-optin-builtin-traits.rs:9:1
   |
LL | impl !AutoDummyTrait for DummyStruct {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/13231
   = help: add #![feature(optin_builtin_traits)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
